CHL002: add analytics feature and upgrade gradle